first working version with minor bugs
