# api/docs/swagger.json
@@ -98,6 +98,11 @@
         },
         "/v1/analysis/{analysis_id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve analysis data by its ID",
                 "consumes": [
                     "application/json"
@@ -202,6 +207,11 @@
         },
         "/v1/auth/logout": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Invalidate user's JWT token",
                 "consumes": [
                     "application/json"
@@ -473,6 +483,11 @@
         },
         "/v1/sensor-data": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Save sensor data for analysis",
                 "consumes": [
                     "application/json"
@@ -518,8 +533,13 @@
                 }
             }
         },
-        "/v1/user-analysis/{user_id}": {
+        "/v1/user-analysis": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve all analysis data for a specific user within a date range",
                 "consumes": [
                     "application/json"
@@ -769,7 +789,7 @@
             "type": "object",
             "required": [
                 "data",
-                "time",
+                "timestamp",
                 "user_id"
             ],
             "properties": {
@@ -788,7 +808,7 @@
                     "description": "Unique identifier for the sensor data",
                     "type": "string"
                 },
-                "time": {
+                "timestamp": {
                     "description": "Timestamp of the reading",
                     "type": "string"
                 },
@@ -933,7 +953,7 @@
     },
     "securityDefinitions": {
         "ApiKeyAuth": {
-            "description": "Enter the token , e.g. \"abcde12345\"",
+            "description": "Enter the token with Bearer prefix, e.g. \"Bearer abcde12345\"",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
