# api/handlers/hrv_analysis.go
@@ -12,26 +12,31 @@ import (
 )
 
 // SaveSensorData godoc
-// @ID save-sensor-data
-// @Router /v1/sensor-data [POST]
-// @Summary Save Sensor Data
-// @Description Save sensor data for analysis
-// @Tags data
-// @Accept json
-// @Produce json
-// @Param sensor_data body models.SensorData true "Sensor data"
-// @Success 201 {object} httpapi.Response
-// @Failure 400 {object} httpapi.Response
-// @Failure 500 {object} httpapi.Response
+//	@ID				save-sensor-data
+//	@Router			/v1/sensor-data [POST]
+//	@Summary		Save Sensor Data
+//	@Description	Save sensor data for analysis
+//	@Tags			data
+//	@Accept			json
+//	@Produce		json
+//	@Param			sensor_data	body		models.SensorData	true	"Sensor data"
+//	@Success		201			{object}	httpapi.Response
+//	@Failure		400			{object}	httpapi.Response
+//	@Failure		500			{object}	httpapi.Response
+//	@Security		ApiKeyAuth
 func (h *Handler) SaveSensorData(c *gin.Context) {
     var sensorData models.SensorData
-
+    userID, exists := c.Get("user_id")
+    if !exists {
+        h.handleResponse(c, httpapi.Unauthorized, "User ID not found in context")
+        return
+    }
     err := c.ShouldBindJSON(&sensorData)
     if err != nil {
         h.handleResponse(c, httpapi.BadRequest, err.Error())
         return
     }
-
+    sensorData.UserID= userID.(string)
     respData,err := h.storage.Analyse().SaveSensorData(context.Background(), &sensorData)
     if err != nil {
         h.handleResponse(c, httpapi.InternalServerError, err)
@@ -61,18 +66,19 @@ func (h *Handler) SaveSensorData(c *gin.Context) {
 }
 
 // GetAnalysisByID godoc
-// @ID get-analysis-by-id
-// @Router /v1/analysis/{analysis_id} [GET]
-// @Summary Get Analysis By ID
-// @Description Retrieve analysis data by its ID
-// @Tags data
-// @Accept json
-// @Produce json
-// @Param analysis_id path string true "Analysis ID"
-// @Success 200 {object} models.HRVAnalysisResult
-// @Failure 400 {object} httpapi.Response
-// @Failure 404 {object} httpapi.Response
-// @Failure 500 {object} httpapi.Response
+//	@ID				get-analysis-by-id
+//	@Router			/v1/analysis/{analysis_id} [GET]
+//	@Summary		Get Analysis By ID
+//	@Description	Retrieve analysis data by its ID
+//	@Tags			data
+//	@Accept			json
+//	@Produce		json
+//	@Param			analysis_id	path		string	true	"Analysis ID"
+//	@Success		200			{object}	models.HRVAnalysisResult
+//	@Failure		400			{object}	httpapi.Response
+//	@Failure		404			{object}	httpapi.Response
+//	@Failure		500			{object}	httpapi.Response
+//	@Security		ApiKeyAuth
 func (h *Handler) GetAnalysisByID(c *gin.Context) {
     analysisID := c.Param("analysis_id")
     if analysisID == "" {
@@ -95,19 +101,20 @@ func (h *Handler) GetAnalysisByID(c *gin.Context) {
 
 
 // GetUserAnalysis godoc
-// @ID get-user-analysis
-// @Router /v1/user-analysis [GET]
-// @Summary Get User Analysis
-// @Description Retrieve all analysis data for a specific user within a date range
-// @Tags data
-// @Accept json
-// @Produce json
-// @Param user_id path string true "User ID"
-// @Param start_date query string false "Start date in YYYY-MM-DD format"
-// @Param end_date query string false "End date in YYYY-MM-DD format"
-// @Success 200 {array} models.UserHRVAnalysisResponse
-// @Failure 400 {object} httpapi.Response
-// @Failure 500 {object} httpapi.Response
+//	@ID				get-user-analysis
+//	@Router			/v1/user-analysis [GET]
+//	@Summary		Get User Analysis
+//	@Description	Retrieve all analysis data for a specific user within a date range
+//	@Tags			data
+//	@Accept			json
+//	@Produce		json
+//	@Param			user_id		path		string	true	"User ID"
+//	@Param			start_date	query		string	false	"Start date in YYYY-MM-DD format"
+//	@Param			end_date	query		string	false	"End date in YYYY-MM-DD format"
+//	@Success		200			{array}		models.UserHRVAnalysisResponse
+//	@Failure		400			{object}	httpapi.Response
+//	@Failure		500			{object}	httpapi.Response
+//	@Security		ApiKeyAuth
 func (h *Handler) GetUserAnalysis(c *gin.Context) {
     userID,exists := c.Get("user_id")
     if !exists {
